application/web/test/src/main/java/com/tekgs/nextgen/planettekness/view/error/ErrorViewCalibratable.java
package com.tekgs.nextgen.planettekness.view.error;

public interface ErrorViewCalibratable {
    String getErrorMessage();

    String getCustomMessage();
}
